<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/mainBG">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/mainIV"
        android:background="@drawable/main"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainTV"
        android:text="Cinema Booking System"
        android:layout_below="@+id/mainIV"
        android:textColor="@color/text"
        android:background="@color/textBG"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="5dp"
        android:textStyle="bold|italic"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userET"
        android:layout_below="@id/mainTV"
        android:layout_margin="25dp"
        android:hint="@string/enter_user_name"
        android:padding="10dp"
        android:inputType="text"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:background="@color/textBG"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passET"
        android:layout_below="@id/userET"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/enter_password"
        android:padding="10dp"
        android:inputType="textPassword"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:background="@color/textBG"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginBTN"
        android:layout_below="@id/passET"
        android:layout_centerInParent="true"
        android:text="@string/login"
        android:textStyle="bold|italic"
        android:textColor="@color/text2"
        android:background="@drawable/button_bg"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/singupTV"
        android:layout_below="@+id/loginBTN"
        android:text="@string/if_have_no_account"
        android:textColor="@color/text"
        android:background="@color/textBG"
        android:textSize="15sp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:layout_marginTop="25dp"
        android:padding="5dp"
        android:textStyle="italic"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/singupBTN"
        android:layout_below="@id/singupTV"
        android:text="@string/sign_up"
        android:background="@color/btnBG"
        android:textColor="@color/text2"
        android:layout_alignParentRight="true"
        android:layout_marginRight="25dp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp" />


</RelativeLayout>