<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changepass"
    android:background="@color/mainBG">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:id="@+id/mainIV"
        android:background="@drawable/main"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/mainTV"
        android:text="Cinema Booking System"
        android:layout_below="@+id/mainIV"
        android:textColor="@color/text"
        android:background="@color/textBG"
        android:gravity="center"
        android:textSize="25sp"
        android:padding="5dp"
        android:textStyle="bold|italic"
        />

    <EditText
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/oldpassword"
        android:layout_below="@id/mainTV"
        android:hint="@string/old_password"
        android:textColor="@color/text"
        android:maxLines="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:padding="15dp"
        android:background="@color/textBG"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/newpassword"
        android:layout_below="@id/oldpassword"
        android:textColor="@color/text"
        android:hint="@string/new_password"
        android:maxLines="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@color/textBG"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/retypepass"
        android:layout_below="@id/newpassword"
        android:textColor="@color/text"
        android:hint="@string/re_type_password"
        android:maxLines="1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="15dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@color/textBG"
        />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/retypepass"
        android:id="@+id/save"
        android:text="@string/save"
        android:layout_centerInParent="true"
        android:textColor="@color/text2"
        android:layout_margin="40dp"
        android:textStyle="bold|italic"
        android:background="@drawable/button_bg"

        />

</RelativeLayout>